--- a/PrinterVendor/src/Pages/css/Walkthrough.css
+++ b/PrinterVendor/src/Pages/css/Walkthrough.css
@@ -12,7 +12,7 @@
   font-weight: bold;
 
   margin-top: 0;
-  color: #1a2233;
+  color: #000000;
   letter-spacing: 2.5px;
   text-align: center;
   text-shadow: 0 2px 8px rgba(31, 38, 135, 0.07);
@@ -23,6 +23,7 @@
   justify-content: center;
   align-items: flex-start;
   width: 100%;
+
   min-height: 480px;
 }
 
@@ -36,7 +37,7 @@
   align-items: center;
   max-width: 420px;
   width: 100%;
-  min-height: 420px;
+  min-height: 430px;
   transition: box-shadow 0.3s;
   position: relative;
 }
@@ -55,7 +56,7 @@
 }
 
 .cards p {
-  font-size: 1.13rem;
+  font-size: 0.9rem;
   color: #2d3a4b;
   margin: 1.2rem 0 0.7rem 0;
   text-align: center;
@@ -88,7 +89,7 @@
 }
 
 .start {
-  margin-top: 2rem;
+  margin-top: 02 rem;
   text-align: center;
 }
 
